# vector_data_generator

./: .gitignore  Cargo.toml  README.md  example.sh
src/: lib.rs  main.rs
