[package]
name = "vector_data_gen"
version = "0.1.0"
edition = "2021"
description = "Generate test data with vector fields and scalar strings for Parquet files"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
parquet = { version = "57.1", features = ["arrow"] }
arrow = { version = "57.1", features = ["prettyprint"] }
rand = "0.9.2"
rand_distr = "0.5.1"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.18.3"
bytesize = "2.3.1"
rayon = "1.10"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "vector_data_gen"
path = "src/main.rs"